tests/rustdoc-ui/intra-doc/incompatible-primitive-disambiguator.stderr
error: incompatible link kind for `u8::MIN`
  --> $DIR/incompatible-primitive-disambiguator.rs:2:6
   |
LL | //! [static@u8::MIN]
   |      ^^^^^^^^^^^^^^ this link resolved to an associated constant, which is not a static
   |
note: the lint level is defined here
  --> $DIR/incompatible-primitive-disambiguator.rs:1:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: to link to the associated constant, prefix with `const@`
   |
LL - //! [static@u8::MIN]
LL + //! [const@u8::MIN]
   |

error: aborting due to 1 previous error

